--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
     "@nestjs/typeorm": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "cross-var": "^1.1.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
@@ -46,7 +49,10 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
