--- a/.env
+++ b/.env
@@ -11,7 +11,9 @@ MYSQL_PASSWORD = Okten
 MYSQL_DATABASE = srmokten
 
 ### Auth Config
+ACTION_TOKEN_SECRET=srmOktenActionToken
 AUTH_ACCESS_TOKEN_SECRET=srmOktenAccessToken
 AUTH_REFRESH_TOKEN_SECRET=srmOktenRefreshToken
+ACTION_TOKEN_EXPIRATION=8h
 AUTH_ACCESS_TOKEN_EXPIRATION=2h
 AUTH_REFRESH_TOKEN_EXPIRATION=1d
