--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ MYSQL_USER = srmokten
 MYSQL_PASSWORD = Okten
 MYSQL_DATABASE = srmokten
 
+### Redis Config
+REDIS_HOST = redis://0.0.0.0:6379
+
 ### Auth Config
 ACTION_TOKEN_SECRET=srmOktenActionToken
 AUTH_ACCESS_TOKEN_SECRET=srmOktenAccessToken
