--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.3.0",
+    "exceljs-node": "^1.6.7",
     "mysql2": "^3.6.1",
-    "nest-csv-parser": "^2.0.4",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
